﻿[COLOR yellow][B]v4.1.3[/B][/COLOR]
* Bring back 4.1.1 "Massive speed improvement of Google machine translate".
* BUG FIX: Subscene Cloudflare bypass.
* BUG FIX: Subscene machine translate doesn't appear.
[COLOR yellow][B]v4.1.2[/B][/COLOR]
* BUG FIX: Subscene Google machine translate - [B]Temporary[/B] revert "Massive speed improvement of Google machine translate" (4.1.1)
[COLOR yellow][B]v4.1.1[/B][/COLOR]
* Massive speed improvement of Google machine translate.
* Add setting to automatically fix Hebrew subtitles punctuation: (for Machine Translate / External Hebrew subtitles only)
[B]הגדרות - הגדרות כלליות - תקן סימני פיסוק אוטומטית[/B]
* Small Ktuvit search bug fix.
[COLOR yellow][B]v4.0.9[/B][/COLOR]
* BUG FIX: Handle correct Hebrew punctuation fixing when subtitle contains html <i> tags.
[COLOR yellow][B]v4.0.8[/B][/COLOR]
* Add "תיקון סימני פיסוק עבור תרגום נוכחי" button in Kodi's subtitles window.
[COLOR yellow][B]v4.0.7[/B][/COLOR]
* Reorganize DarkSubs buttons in Kodi's subtitles window.
* Change subtitles websites colors.
[COLOR yellow][B]v4.0.6[/B][/COLOR]
* Rewrite OpenSubtitles code to use new OpenSubtitles.com API.
  https://opensubtitles.stoplight.io/
* Add user setting to add your own OpenSubtitles API key (Optional).
[COLOR yellow][B]v4.0.4[/B][/COLOR]
* Fix Yandex machine translate progress text.
* Remove Bing machine translate.
* Other small fixes.
[COLOR yellow][B]v4.0.0[/B][/COLOR]
* BUG FIX: Limit "write_heb_embedded_taglines_check" function to Twilight addon.
* Remove empty log line (autosub.py)
[COLOR yellow][B]v3.9.9[/B][/COLOR]
* BUG FIX: Update "requests_toolbelt" dependency version (urllib3 2.1.0 compatibility).
[COLOR yellow][B]v3.9.8[/B][/COLOR]
* Add DarkSubs icon in Kodi subtitle window (logo.png)
[COLOR yellow][B]v3.9.7[/B][/COLOR]
* Change OpenSubtitles label from [Op] to [Ops].
[COLOR yellow][B]v3.9.6[/B][/COLOR]
* Change settings default value.
[COLOR yellow][B]v3.9.5[/B][/COLOR]
* Added notification for fault sub event.